<resources>
    <string name="app_name">My Application</string>
    <string name="sqr2">˄2</string>
    <string name="sqr2_">sqr2</string>
    <string name="_1">1</string>
    <string name="clear">Clear</string>
    <string name="sqr3">sqr3</string>
    <string name="rightSlash">/</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="del">del</string>
    <string name="equal">=</string>
</resources>